<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/start_instruction"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/confirmPassword"
        android:inputType="textPassword"
        android:hint="@string/start_instruction"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/dropbox"
        android:text="@string/connect_dropbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
