<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
        <TextView
            android:id="@+id/passwordTextView"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical">
            <TextView
                android:text="@string/label"
                android:hint="@string/optional"
                android:layout_width="60dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/labelTextView"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical">
            <TextView
                android:text="@string/username"
                android:layout_width="60dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/usernameTextView"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical">
            <TextView
                android:text="@string/prefix"
                android:layout_width="60dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/prefixTextView"
                android:layout_margin="20dp"
                android:layout_width="60dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical">
            <TextView
                android:text="@string/hashLength"
                android:layout_width="60dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/lengthTextView"
                android:inputType="number"
                android:layout_margin="20dp"
                android:layout_width="60dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical">
            <TextView
                android:text="@string/version"
                android:layout_width="60dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/versionTextView"
                android:inputType="number"
                android:layout_margin="20dp"
                android:layout_width="60dp"
                android:layout_height="wrap_content"/>
            <ImageButton
                android:background="@android:color/transparent"
                android:src="@drawable/ic_add_black_24dp"
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Button
            android:id="@+id/deleteButton"
            android:layout_margin="30dp"
            android:layout_gravity="center"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/updateButton"
        android:layout_margin="20dp"
        android:layout_gravity="bottom|right"
        android:src="@drawable/ic_done_white_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</FrameLayout>